no-touch and fastclick removed/refactored with css

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="/pwa/manifest.json">
     <link rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin">
   </head>
-  <body no-js no-touch>
+  <body no-js>
     <main>
       <moon-info></moon-info>
       <moon-charts></moon-charts>
