--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,11 +3,9 @@
   <head>
     <title>Moon</title>
     <meta charset="utf-8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="description" content="Geolocation-based moon phase, moonrise, and moonset">
+    <meta name="description" content="Location-based moon phase, moonrise, and moonset">
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="manifest" href="/pwa/manifest.json">
     <link rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin">
   </head>
   <body class="no-js">
