--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin">
   </head>
-  <body class="no-js">
+  <body>
     <moon-app></moon-app>
     <noscript>
       Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
