--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="description" content="Location-based moon phase, moonrise, and moonset">
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="preload" as="font" type="font/woff2" crossorigin="crossorigin"
+      href="https://gauslin.com/fonts/AvenirNext-Variable.woff2">
   </head>
   <body>
     <moon-app></moon-app>
