--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Location-based moon phase, moonrise, and moonset">
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
+    <link rel="icon" href="./favicon.ico">
   </head>
   <body>
     <moon-app></moon-app>
