renames moon to luna

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-GB">
   <head>
-    <title>Moon</title>
+    <title>Luna</title>
     <meta charset="utf-8">
     <meta name="description" content="Location-based moon phase, moonrise, and moonset">
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
@@ -9,7 +9,7 @@
     <link rel="icon" href="./favicon.ico">
   </head>
   <body>
-    <moon-app></moon-app>
+    <luna-app></luna-app>
     <noscript>
       Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
     </noscript>    
