adds main role for a11y

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./favicon.ico">
   </head>
   <body>
-    <luna-app></luna-app>
+    <luna-app role="main"></luna-app>
     <noscript>
       Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
     </noscript>    
